<resources>
    <string name="app_name">Parking ESAN Beta</string>

    <!-- CORREO.JAVA -->
    <string name="existe">El correo ya existe</string>
    <string name="compruebe">Compruebe su conexión a internet</string>
    <string name="cova">Ingrese un correo válido</string>

    <string name="terminos">"La versión actual es una versión Beta la cual está propensa a que se puedan presentar fallas en el aplicativo, de igual manera se le pide que por favor toda observación o falla observada la comuniquen a través de la opción “sugerencias y comentarios” de la aplicación, o a través del correo estacionamiento@ue.edu.pe


\nTÉRMINOS Y CONDICIONES
\nESAN no se responsabiliza por el cambio repentino de la cantidad de estacionamientos disponibles en cualquiera de los estacionamientos.
El usuario deberá tomar en cuenta las horas en las que existe un exceso en la cantidad de demanda del servicio.
Para más información el usuario deberá ver la Información desde el menú de la aplicación.
\n
\nPOLÍTICA DE LA APLICACIÓN
La aplicación le mostrará una vista general de la disponibilidad aproximada de cada playa de estacionamiento.
Al aceptar los términos y condiciones queda determinado que el usuario declara conocer expresamente que no podrá dar reclamación alguna sobre los puntos anteriormente tratados.
\n


        "</string>
    <string name="solonum">El correo sólo debe contener números</string>
    <string name="incorrecto">El correo ingresado es incorrecto</string>
    <string name="solosiete">El correo sólo debe contener 7 dígitos</string>
    <string name="debeAceptarTC">Debe aceptar los términos y condiciones</string>


    <!-- DATOS.JAVA -->
    <string name="codenviado">Se envió un código de confirmación al correo ingresado anteriormente</string>
    <string name="compruebeC">Compruebe su conexión a internet</string>


    <!-- MAINACTIVITY.JAVA -->
    <string name="compruebeM">"Compruebe su conexión a internet"</string>


    <!-- MAINACTIVITY2ACTIVITY.JAVA -->
    <string name="CompruebeCon">"Compruebe su conexión a internet"</string>


    <!-- OLVIDO.JAVA -->
    <string name="Comp">"Compruebe su conexión a internet"</string>
    <string name="ingCV">"Ingrese un correo válido"</string>
    <string name="envio1">"Se envió la contraseña al correo : "</string>
    <string name="envio2">"Revise su correo para poder recuperar su contraseña"</string>

    <string name="btOk">"Ok"</string>

    <!-- PERFIL.JAVA -->
    <string name="compP">"Compruebe su conexión a internet"</string>


    <!-- ACTIVITY_MAIN.XML -->
    <string name="hintUsuario">" Correo"</string>
    <string name="hintPassword">" Contraseña"</string>
    <string name="cbRecuerdame">Recuérdame</string>
    <string name="tvOlvido">He olvidado mi contraseña</string>
    <string name="btAcceder">Acceder</string>
    <string name="btRegistrarse">Registrarse</string>


    <!-- ACTIVITY_OLVIDO.XML -->
    <string name="btEnviar">Enviar</string>
    <string name="btAtras">Regresar</string>
    <string name="tvInfo">Se enviará la contraseña al correo ingresado:</string>
    <string name="cor">Correo</string>
    <string name="btAtr">Atrás</string>


    <!-- info_activity-->
    <string name="info"><b>\n
\nSe han reservado las siguientes playas de estacionamiento hasta nuevo aviso:
\nAv. El Polo cdra. 9 s/n (a media cuadra del cruce con Av. El Derby).
\nHorario de atención:\n
•	lunes a viernes, de 6:00 pm. a 11:30 pm.
\n\nPara acceder a esta playa es requisito indispensable, al momento del ingreso al recinto, mostrar su carnet universitario, carnet de la Universidad ESAN u otro documento que los identifique como tal. \nDe no contar con dichos documentos, por favor, ingresar al siguiente link \n http://tinyurl.com/PaseESANPlayaElPolo\n e imprimir el pase, llenar sus datos y colocarlo en una parte visible de su vehículo.
\n\nTraslado desde la playa de la Av. El Polo a ESAN:
\nA partir de las 6:00 pm, se pondrá a disposición de los alumnos, un servicio de taxi (contratado por la Universidad, sin costo para el alumno) que los trasladarán hasta el campus.
\n\nRetorno de ESAN a la playa de la Av. El Polo: A partir de la 7:30 pm, se pondrá el servicio de taxi, los cuales estarán ubicados en la playa de estacionamiento 1 (costado izquierdo del ingreso vehicular a la universidad).
\n
\nJr. Alonso de Molina 1520 (a media cuadra del Campus).Capacidad limitada.
\nHorario de atención:
\n•	lunes a viernes, de 6:00 pm. a 11:30 pm.
\n•	sábados, de 7:30 am. a 11:30 pm.
        \n
\nAl ingresar a esta playa, se les entregará un ticket, que deberán hacerlo sellar a la salida de clases en la oficina de Seguridad, ubicada en la puerta de ingreso al campus universitario.
\nEl costo de ambas playas es asumido por la Universidad ESAN, siempre que se cumpla con los requisitos mencionados en los párrafos anteriores.
\nTeniendo en consideración que la capacidad de la playa de estacionamiento del campus y de las que han sido contratadas por la Universidad es limitada, se les invita a tomar las medidas oportunas para que puedan llegar a tiempo a sus clases. Por cuestiones de seguridad, una vez completado el aforo de los recintos mencionados, no se permitirá el acceso.
\nLes recordamos que la Universidad ESAN no se responsabiliza por los perjuicios o multas a los vehículos estacionados fuera del campus universitario.
 \n
\nVERSION
        \n
        Beta 1.1


</b></string>

    <string name="ley">Leyenda</string>
    <string name="ley2">Rojo: lleno</string>
    <string name="ley3">Amarillo: \n casi lleno</string>
    <string name="ley4">Verde: libre</string>
    <string name="ley5">Información Adicional</string>
    <string name="gui">-</string>
    <string name="ggui">-</string>
    <string name="ghfgh">-</string>
    <string name="dfh">-</string>
    <string name="cerr">Cerrado</string>
    <string name="ceerra">Cerrado</string>
    <string name="gogogo">ir</string>


    <!-- LAY CORREO.XML -->
    <string name="correo">Ingrese su correo</string>
    <string name="nota">"*Su correo será usado con el fin de validar la cuenta"</string>
    <string name="textoCB">"Acepto los términos y condiciones de uso"</string>
    <string name="enviarCod">Enviar \n código</string>


    <!-- LAY DATOS.XML -->
    <string name="nombre">"Nombre"</string>
    <string name="ape">Apellidos</string>
    <string name="placa">"Placa: "</string>
    <string name="telefono">"Teléfono: "</string>
    <string name="contraseña">"Escriba una contraseña: "</string>
    <string name="codigo">"Digite el código de verificación: "</string>
    <string name="aceptar">"Aceptar"</string>


    <!-- LAY_ESTACIONAMIENTO.XML -->
    <string name="ESAN">ESAN</string>
    <string name="LugESAN">Jr. Alonso \n de Molina 1652</string>
    <string name="Alonso">Playa "Alonso \n de Molina"</string>
    <string name="LugAlonso">Jr. Alonso \n de Molina 1520 </string>
    <string name="Polo">Playa "El Polo"</string>
    <string name="LugPolo">Av. El Polo cdra. 9</string>


    <!-- LAYOUT_PERFIL-->
    <string name="tvPerfil">Editar mi perfil</string>
    <string name="Nplaca">Ingrese sus otras placas: </string>
    <string name="Ncontraseña">Ingrese una nueva contraseña: </string>
    <string name="Ntelefono">Ingrese su nuevo teléfono: </string>
    <string name="actualizar">"Actualizar datos"</string>


    <!-- POPUP3.XML -->
    <string name="tvTC">Términos y Condiciones</string>
    <string name="btAcep">Aceptar</string>
    <string name="btCan">Cancelar</string>


    <!-- MENÚS DE SALIDA-->
    <string name="menu_salir">Salir</string>
    <string name="menu_cerrar">Cerrar sesión</string>
    <string name="menu_regresar">Regresar</string>
    <string name="informacion">Información</string>
    <string name="suge">Sugerencias y Comentarios</string>
    <string name="perfil">Editar perfil</string>

    <string name="esan">Campus ESAN</string>


    <string-array name="correos">
        <item>"@esan.edu.pe"</item>
        <item>"@ue.edu.pe"</item>

    </string-array>

    <string name="title_activity_olvido">Olvido</string>
    <string name="title_activity_info">Info</string>
    <string name="title_activity_feedback">Feedback</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="rtty">Cargando</string>
    <string name="ytr">Cargando</string>
    <string name="ert">Cargando</string>


</resources>
