<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#FFFFFF"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/iv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/et1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hintUsuario"
        android:layout_below="@+id/iv1"
        android:layout_centerHorizontal="true"
        android:width="250dp"
        android:background="@drawable/edittext"
        android:inputType="textNoSuggestions"/>

    <EditText
        android:id="@+id/et2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hintPassword"
        android:layout_below="@+id/et1"
        android:layout_centerHorizontal="true"
        android:width="250dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext"
        android:inputType="textPassword"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb1"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/et2"
        android:layout_alignLeft="@+id/et2"
        android:layout_alignStart="@+id/et2"
        android:layout_marginLeft="-8dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbRecuerdame"
        android:id="@+id/textView12"
        android:layout_alignBaseline="@+id/cb1"
        android:layout_alignBottom="@+id/cb1"
        android:layout_toRightOf="@+id/cb1"
        android:layout_toEndOf="@+id/cb1"
        />

    <TextView
        android:id="@+id/tvhe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvOlvido"
        android:layout_below="@+id/cb1"
        android:layout_alignLeft="@+id/et2"
        android:layout_alignStart="@+id/et2"
        android:layout_marginTop="15dp"
        android:textStyle="bold"/>



    <Space android:id="@+id/dummy"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:layout_below="@id/tvhe"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/button"
        android:onClick="logstart"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/btAcceder"
        android:background="@drawable/mybutton"
        android:textColor="#FFFFFF"
        android:textSize="15sp"

        android:layout_toRightOf="@+id/dummy"
        android:layout_toEndOf="@+id/dummy"
        android:layout_alignTop="@+id/dummy"
        />

    <Button
        android:id="@+id/button2"
        android:onClick="register"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/btRegistrarse"
        android:background="@drawable/mybutton"
        android:textColor="#FFFFFF"
        android:textSize="15sp"


        android:layout_toLeftOf="@+id/dummy"
        android:layout_alignTop="@+id/dummy"
         />

</RelativeLayout>
</ScrollView>


