<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/tvCorreo"
        android:text="@string/correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="#C90039"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/etmail"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:singleLine="true"
        android:cursorVisible="true"
        android:textColorHint="#C90039"
        android:layout_below="@+id/tvCorreo"
        android:background="@drawable/edittexts"
        android:ems="8" />

    <TextView
        android:id="@+id/nota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etmail"
        android:textColor="#ff828282"
        android:layout_alignLeft="@id/etmail"
        android:layout_alignStart="@id/etmail"
        android:layout_alignEnd="@id/etmail"
        android:layout_margin="3dp"
        android:padding="1dp"/>

    <Spinner
        android:id="@+id/spinnermail"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCorreo"
        android:layout_marginTop="17dp"
        android:layout_toRightOf="@+id/etmail"
        android:layout_toEndOf="@id/etmail"/>


    <ImageView
        android:id="@+id/logo"
        android:layout_width="240dp"
        android:layout_height="240dp"

        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_above="@+id/btEnviar"
        android:padding="8dp">

        <CheckBox
            android:id="@+id/cbTyC"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:buttonTint="#C90039"
            android:padding="3dp"/>

        <TextView
            android:id="@+id/textCB"
            android:textSize="17sp"
            android:textColor="#ff828282"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textoCB" />
    </LinearLayout>


    <Button
        android:id="@+id/btEnviar"
        android:text="@string/enviarCod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textColor="#FFFFFF"
        android:background="#C90039"
        android:layout_margin="20dp" />

</RelativeLayout>


